wg keys stored in files

--- a/ansible/roles/vpnserver/templates/wg0.netdev.j2
+++ b/ansible/roles/vpnserver/templates/wg0.netdev.j2
@@ -9,6 +9,6 @@ ListenPort=51820
 
 {% for peer in groups['case'] %}
 [WireGuardPeer]
-PublicKey={{ hostvars[peer].wg0.public_key }}
+PublicKeyFile="/etc/systemd/network/keys/{{ hostvars[peer].wg0_ip_address }}"
 AllowedIPs={{ hostvars[peer].wg0_ip_address }}/32
 {% endfor %}
